# DPKI

./: .env  USER_CREDENTIALS.md  USER_LOGIN_INSTRUCTIONS.md  architecture.md  docker-compose.yml  package-lock.json  pyproject.toml
app/core/: config.py
app/db/: postgres.py
backend/: package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/common/guards/: roles.guard.ts
backend/src/config/: blockchain.config.ts  configuration.ts
backend/src/database/: seed.ts
backend/src/database/seed-data/: dids.json  documents.json  users.json  verifiable-credentials.json
backend/src/database/seeds/: demo-data.seed.ts  index.ts  seed.command.ts
backend/src/modules/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
backend/src/modules/ai/: ai.controller.ts  ai.module.ts  ai.service.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/modules/blockchain/: blockchain.module.ts  blockchain.service.ts
backend/src/modules/did/: did.controller.ts  did.module.ts  did.service.ts
backend/src/modules/documents/: documents.controller.ts  documents.module.ts  (+1 more)
docs/: api_documentation.md  application_overview.md  functionality_guide.md  installation_ubuntu.md  installation_windows.md  troubleshooting.md  usage_guide.md
docs/enhanced/: api_documentation.md  usage_guide.md
frontend/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/store/: index.ts
frontend/src/types/: verifiable-credential.ts
frontend/src/utils/: api.ts
(+62 files in other folders)
